--- a/javascript-test/table/index.html
+++ b/javascript-test/table/index.html
@@ -11,6 +11,32 @@
             <td><%= email %></td>
             <td><%= phone %></td>
         </script>
+        <script id="pager-template" type="text/template">
+            <ul class="pager">
+                <% _(pages).times(function (n) { %>
+                    <li>
+                        <% if (n + 1 === currentPage) { %>
+                            <span><%= n + 1 %></span>
+                        <% } else {%>
+                            <a href="#" class="pager__item" data-page="<%= n + 1 %>">
+                                <%= n + 1 %>
+                            </a>
+                        <% } %>
+                    </li>
+                <% }); %>
+            </ul>
+            <ul class="pager-count">
+                <% _.each(perPageOptions, function(option) { %>
+                    <li>
+                        <% if (option === perPage) { %>
+                            <span><%= option %></span>
+                        <% } else { %>
+                            <a href="#" class="pager-count__item"><%= option %></a>
+                        <% } %>
+                    </li>
+                <% }); %>
+            </ul>
+        </script>
     </head>
     <body>
         <h1>Data Table</h1>
