--- a/javascript-test/table/index.html
+++ b/javascript-test/table/index.html
@@ -4,13 +4,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
         <title>Data Table</title>
-        <script id="table-row-template" type="text/template">
-            <td><%= id %></td>
-            <td><%= firstName %></td>
-            <td><%= lastName %></td>
-            <td><%= email %></td>
-            <td><%= phone %></td>
-        </script>
         <script id="pager-template" type="text/template">
             <ul class="pager">
                 <% _(pages).times(function (n) { %>
@@ -40,18 +33,7 @@
     </head>
     <body>
         <h1>Data Table</h1>
-        <table id="users-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>E-mail</th>
-                    <th>Phone</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <div class="users-data"></div>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/underscore/underscore-min.js"></script>
         <script src="node_modules/backbone/backbone-min.js"></script>
