added basic styling

--- a/javascript-test/table/index.html
+++ b/javascript-test/table/index.html
@@ -41,8 +41,17 @@
         </script>
     </head>
     <body>
-        <h1>Data Table</h1>
-        <div class="users-data"></div>
+        <div class="container">
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href="#!/small">Small Data</a></li>
+                        <li><a href="#!/large">Large Data</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="users-data"></div>
+        </div>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/underscore/underscore-min.js"></script>
         <script src="node_modules/backbone/backbone-min.js"></script>
