finished router / added loading and error state / style fixes

--- a/javascript-test/table/index.html
+++ b/javascript-test/table/index.html
@@ -52,7 +52,7 @@
                     </ul>
                 </nav>
             </header>
-            <div class="users-data"></div>
+            <div id="app"></div>
         </div>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/underscore/underscore-min.js"></script>
