added button styles

--- a/html-test/tasks/index.html
+++ b/html-test/tasks/index.html
@@ -24,6 +24,10 @@
             </div>
             <h3>Прогресс-бар</h3>
             <progress value="20" max="100"></progress>
+            <h3>Кнопки</h3>
+            <a href="#" class="btn btn--success btn--small">Перейти</a>
+            <button class="btn">Сохранить</button>
+            <input type="submit" class="btn btn--large" value="Добавить">
         </div>
     </body>
 </html>
